# navy-arp2

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflow/: build_vst3.yml
.github/workflows/: build_and_test.yml  build_standalone.yml  build_vst3.yml
source/: AppTheme.h  ChromaCapsLookAndFeel.cpp  ChromaCapsLookAndFeel.h  OledDisplay.cpp  OledDisplay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: PluginBasics.cpp
